UV map shown over render result in UV/Image editor in texture painting mode #42033

Closed
opened 2014-10-01 10:30:15 +02:00 by Fco. Javier Delgado del Hoyo · 9 comments

System Information
Ubuntu 14.04, NVIDIA GTX 285

Blender Version
Broken: 2.72

Short description of error
In Texture painting mode, when you render an image, the result is shown in the UV/Image editor as usually but the UV/Map is drawn over it.

Exact steps for others to reproduce the error
1.- Unwrap the cube to create the UV map
2.- Create a new black image and enter texture painting mode
3.- Create a new material ans assign a texture with the created image
4.- Draw something over the texture
5.- Render (F12)

For more details see the attached blend file

**System Information** Ubuntu 14.04, NVIDIA GTX 285 **Blender Version** Broken: 2.72 **Short description of error** In Texture painting mode, when you render an image, the result is shown in the UV/Image editor as usually but the UV/Map is drawn over it. **Exact steps for others to reproduce the error** 1.- Unwrap the cube to create the UV map 2.- Create a new black image and enter texture painting mode 3.- Create a new material ans assign a texture with the created image 4.- Draw something over the texture 5.- Render (F12) For more details see the attached blend file

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Fco.JavierDelgadodelHoyo

Added subscriber: @Fco.JavierDelgadodelHoyo

Check this file renderUVTest.blend

Check this file [renderUVTest.blend](https://archive.blender.org/developer/F113901/renderUVTest.blend)
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-10-02 11:13:36 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Antony, mind having a look in here?

Antony, mind having a look in here?

This issue was referenced by 9ac0b4ff05

This issue was referenced by 9ac0b4ff056060cab78b2b787bc567d72295f3f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9ac0b4ff05.

Closed by commit 9ac0b4ff05.

This issue was referenced by 1cdffa725e

This issue was referenced by 1cdffa725e518fc6ef01e40bd3aa5c184d5554b5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42033
No description provided.