Fix T42033 UVs shown while rendering in texture paint mode.

This should be included in final release build.