source/blender/editors/space_image/image_edit.c
@@ -303,13 +303,6 @@ bool ED_space_image_show_paint(SpaceImage *sima)
 	return (sima->mode == SI_MODE_PAINT);
 }
 
-bool ED_space_image_show_texpaint(SpaceImage *sima, Object *ob)
-{
-	return (ob && ob->type == OB_MESH &&
-	        ob->mode == OB_MODE_TEXTURE_PAINT &&
-	        !(sima->flag & SI_NO_DRAW_TEXPAINT));
-}
-
 bool ED_space_image_show_uvedit(SpaceImage *sima, Object *obedit)
 {
 	if (sima && (ED_space_image_show_render(sima) || ED_space_image_show_paint(sima)))
@@ -323,24 +316,6 @@ bool ED_space_image_show_uvedit(SpaceImage *sima, Object *obedit)
 
 		return ret;
 	}
-
-	return false;
-}
-
-bool ED_space_image_show_uvshadow(SpaceImage *sima, Object *obedit)
-{
-	if (ED_space_image_show_render(sima))
-		return false;
-
-	if (ED_space_image_show_paint(sima))
-		if (obedit && obedit->type == OB_MESH) {
-			struct BMEditMesh *em = BKE_editmesh_from_object(obedit);
-			bool ret;
-
-			ret = EDBM_mtexpoly_check(em);
-
-			return ret && !(sima->flag & SI_NO_DRAW_TEXPAINT);
-		}
 
 	return false;
 }
