source/blender/editors/uvedit/uvedit_draw.c
@@ -946,14 +946,30 @@ static void draw_uvs(SpaceImage *sima, Scene *scene, Object *obedit)
 	glPointSize(1.0);
 }
 
+
+static void draw_uv_shadows_get(SpaceImage *sima, Object *ob, Object *obedit, bool *show_shadow, bool *show_texpaint)
+{
+	*show_shadow = *show_texpaint = false;
+
+	if (ED_space_image_show_render(sima) || (sima->flag & SI_NO_DRAW_TEXPAINT))
+		return;
+
+	if ((sima->mode == SI_MODE_PAINT) && obedit && obedit->type == OB_MESH) {
+		struct BMEditMesh *em = BKE_editmesh_from_object(obedit);
+		
+		*show_shadow = EDBM_mtexpoly_check(em);
+	}
+	
+	*show_texpaint = (ob && ob->type == OB_MESH && ob->mode == OB_MODE_TEXTURE_PAINT);
+}
+
 void draw_uvedit_main(SpaceImage *sima, ARegion *ar, Scene *scene, Object *obedit, Object *obact)
 {
 	ToolSettings *toolsettings = scene->toolsettings;
-	int show_uvedit, show_uvshadow, show_texpaint_uvshadow;
+	bool show_uvedit, show_uvshadow, show_texpaint_uvshadow;
 
-	show_texpaint_uvshadow = ED_space_image_show_texpaint(sima, obact);
 	show_uvedit = ED_space_image_show_uvedit(sima, obedit);
-	show_uvshadow = ED_space_image_show_uvshadow(sima, obedit);
+	draw_uv_shadows_get(sima, obact, obedit, &show_uvshadow, &show_texpaint_uvshadow);
 
 	if (show_uvedit || show_uvshadow || show_texpaint_uvshadow) {
 		if (show_uvshadow)
